--- a/src/components/Body/Hero/Image.css
+++ b/src/components/Body/Hero/Image.css
@@ -1,11 +1,27 @@
 #avatar {
-	width: 30%;
+	width: 40%;
 	aspect-ratio: 1 / 1;
+	position: relative;
+}
+
+.avatar-mask {
+	position: absolute;
+	inset: 0;
 	border-radius: 50%;
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.avatar-ring {
+	position: absolute;
+	inset: 0;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+	overflow: visible;
+	transform: rotate(-90deg);
 }
 
 #hero-image {
