--- a/src/components/Body/Hero/Hero.css
+++ b/src/components/Body/Hero/Hero.css
@@ -1,8 +1,9 @@
 #hero {
+	/* width: 768px; */
+	margin: auto;
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	gap: 10rem;
+	justify-content: space-between;
 }
 
 @media (max-width: 768px) {
