numerous changes to the layout

--- a/src/components/Body/Hero/Hero.css
+++ b/src/components/Body/Hero/Hero.css
@@ -1,9 +1,8 @@
 #hero {
-	/* width: 768px; */
 	margin: auto;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 @media (max-width: 768px) {
