--- a/src/components/Header/Brand.css
+++ b/src/components/Header/Brand.css
@@ -1,3 +1,19 @@
 #brand {
 	margin: 0;
+	font-family: 'Kaushan Script', cursive;
+	font-weight: 700;
+	font-size: 2rem;
+	background: linear-gradient(to right, #ff3300, #ffff00, #ff3300);
+	background-size: 200% auto;
+	color: transparent;
+	-webkit-background-clip: text;
+	background-clip: text;
+	animation: wave 4s ease infinite;
+	cursor: pointer;
+}
+
+@keyframes wave {
+	to {
+		background-position: -200% center;
+	}
 }
