--- a/src/components/Body/Skills/Stack.css
+++ b/src/components/Body/Skills/Stack.css
@@ -1,19 +1,41 @@
 #stack {
+	width: 80%;
 	display: flex;
 	flex-direction: column;
 	gap: 3rem;
 	align-items: center;
+	margin: 0 auto;
+}
+
+#section-title-stack {
+	display: inline-block;
+	font-size: 2rem;
+	margin: 0;
+	border-bottom: 2px solid #00ffff;
+	padding-bottom: 0.5rem;
+	text-transform: uppercase;
+	color: #fff;
+	text-shadow: 0 0 10px #00ffff;
 }
 
 .stack-category {
 	width: 100%;
 	text-align: center;
+	border: 1px solid #00ffff;
+	box-shadow: 0 0 10px rgba(0, 255, 255, 0.5);
+	border-radius: 12px;
+	background: rgba(0, 0, 0, 0.2);
 }
 
-.stack-category h3 {
+.stack-category-title {
+	display: inline-block;
 	text-transform: capitalize;
 	margin-bottom: 1rem;
 	font-size: 1.5rem;
+	background-color: #00ffff;
+	border-radius: 12px;
+	margin: 1rem;
+	padding: 0.5rem 0.7rem;
 }
 
 .stack-row {
