--- a/src/components/Body/Projects/Projects.css
+++ b/src/components/Body/Projects/Projects.css
@@ -1,11 +1,17 @@
-#projects {
+#Projects {
 	width: 80%;
 	margin: 4rem auto;
 	color: #fff;
 }
 
 .projects-list {
-	display: flex;
-	flex-direction: column;
-	gap: 5rem;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 2rem;
+}
+
+@media (max-width: 900px) {
+	.projects-list {
+		grid-template-columns: 1fr;
+	}
 }
