--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -13,6 +13,7 @@
 
 .nav-link {
 	text-decoration: none;
+	font-family: 'Outfit', sans-serif;
 	color: inherit;
 	font-size: 1rem;
 	font-weight: 500;
