--- a/src/components/Body/Projects/Project.css
+++ b/src/components/Body/Projects/Project.css
@@ -48,6 +48,7 @@
 
 .project-description {
 	font-size: 1rem;
+	font-family: "Outfit", sans-serif;
 	color: #ccc;
 	line-height: 1.5;
 	margin-bottom: 1.5rem;
