--- a/src/components/Body/SectionSeparator/SectionSeparator.css
+++ b/src/components/Body/SectionSeparator/SectionSeparator.css
@@ -12,7 +12,7 @@
 	width: 100%;
 	height: 4px;
 	border-radius: 2px;
-	background: linear-gradient(to right, #ff3300, #ffff00, #ff3300);
+	background: var(--bg-gradient-color-scheme);
 	background-size: 200% auto;
 	animation: wave 4s ease infinite;
 	opacity: 0.7;
@@ -40,7 +40,7 @@
 	font-weight: 700;
 	font-size: 1.2rem;
 
-	background: linear-gradient(to right, #ff3300, #ffff00, #ff3300);
+	background: var(--bg-gradient-color-scheme);
 	background-size: 200% auto;
 	color: transparent;
 	-webkit-background-clip: text;
