--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,18 @@
 
 :root {
 	--bg-color: #1e293b;
-	--bg-gradient-color-scheme: linear-gradient(to right, #00ffff, #098383, #00ffff);
+	--gradient-col-1: #00ffff;
+	--gradient-col-2: #098383;
+	--bg-gradient-color-scheme: linear-gradient(to right, var(--gradient-col-1), var(--gradient-col-2), var(--gradient-col-1));
+	--cursor-color: #00ffff;
 }
 
 [data-theme="light"] {
 	--bg-color: rgb(71, 173, 221);
-	--bg-gradient-color-scheme: linear-gradient(to right, #6fbbe5, #cfe9f7, #6fbbe5);
+	--gradient-col-1: #6f5ae6;
+	--gradient-col-2: #3c22d1;
+	--bg-gradient-color-scheme: linear-gradient(to right, var(--gradient-col-1), var(--gradient-col-2), var(--gradient-col-1));
+	--cursor-color: #306c88;
 }
 
 html {
